# adore

./: .ci  .gitignore  .gitmodules  .tests  CONTRIBUTING.md  CONTRIBUTORS.md  Justfile  Makefile  NOTICE.md  README.md  THIRD-PARTY.md  adore.env  adore_cli.env  ci.env  citation.cff  colcon_defaults.yaml  configuring_adore.md  mqtt_bridge_config.yaml  requirements.adore_cli.system  requirements.ppa  requirements.system  setup.sh  simulation_scenarios  utils.mk  zenoh_bridge_config.json5  zenoh_bridge_config.yaml  zenoh_router_config.json5
.colcon_workspace/: Makefile
.githooks/: commit-msg
.github/: pull_request_template.md
adore_embedded/: .dockerignore  .gitignore  Dockerfile  Dockerfile.adore_runtime  Makefile  README.md  README.release.md  requirements.pip3  requirements.ppa  requirements.system
adore_scenarios/: CMakeLists.txt  README.md  __init__.py  package.xml
adore_scenarios/assets/lichtblick_layouts/: Default.json
adore_scenarios/assets/maps/: process_image.py
adore_scenarios/assets/odd/: simulation_odd.json
adore_scenarios/assets/tracks/: de_bs_borders_wfs.r2sl  de_bs_borders_wfs.r2sr  edit_roads.py  r2s_flightfield_edemissen_26022026_25832.r2sl  r2s_flightfield_edemissen_26022026_25832.r2sr
adore_scenarios/assets/vehicle_params/: FC2.json  NGC.json  obstacle.json  test_vehicle.json
adore_scenarios/integration_tests/: sad_test.py  state_test_base.py  test_helpers.py  test_mad_simulation.py  test_sad_simulation.py  topic_test_base.py
adore_scenarios/scenario_helpers/: ngc.py  ngc_controller_params.py  requirements.system  simulated_infrastructure.py  simulated_vehicle.py  simulation_controller_params.py  simulation_planner_params.py  visualizer.py
adore_test_programs/adore_map_downloader_test/: CMakeLists.txt  basic_map_loading_from_wfs_test.cpp  requirements.cmake
docs/: index.html
ros2_workspace/src/adore_interfaces/grpc_message_bridge/: .gitignore  .secrets.env.template  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  grpc_publish.py  grpc_server.py  grpc_subscribe.py  package.xml  requirements.pip3  requirements.system  setup.cfg  setup.py  start_grpc_message_bridge.sh  start_local_grpc_server.sh  stop_local_grpc_server.sh
ros2_workspace/src/adore_interfaces/grpc_message_bridge/config/: bridge_config.yaml
ros2_workspace/src/adore_interfaces/grpc_message_bridge/grpc_message_bridge/: auth.py  bridge_node.py  codec.py  proto_loader.py  proto_registry.py  ros_bridge.proto  ros_bridge_pb2.py  ros_bridge_pb2_grpc.py  servicer_factory.py  utils.py
ros2_workspace/src/adore_interfaces/grpc_message_bridge/launch/: bridge.launch.py
ros2_workspace/src/adore_interfaces/grpc_message_bridge/scripts/: grpc_test_bridge.sh  test_frontend_client.py  test_integration.py
ros2_workspace/src/adore_interfaces/grpc_message_bridge/tools/: grpc_check_server.sh  grpc_common.sh  grpc_test_pubsub.sh  grps_oath_test.sh  test_connection.py  test_integration.py  test_vehicle_client.py
ros2_workspace/src/adore_interfaces/hardware_monitor/: .gitignore  README.md  get_hardware_inventory.sh  get_hardware_status.sh  package.xml  setup.cfg  setup.py  start.sh  start_web_ui.sh  stop.sh  stop_web_ui.sh
ros2_workspace/src/adore_interfaces/hardware_monitor/config/: hardware_monitor.yaml
ros2_workspace/src/adore_interfaces/hardware_monitor/hardware_monitor/: hardware_discovery_node.py  hardware_monitor_api.py  hardware_status_node.py  hardware_utils.py
ros2_workspace/src/adore_interfaces/hardware_monitor/launch/: hardware_monitor.launch.py
ros2_workspace/src/adore_interfaces/hardware_monitor/web_ui/: adore_integration.py  hardware_monitor_web.py
ros2_workspace/src/adore_interfaces/hardware_monitor/web_ui/static/: hardware_monitor_panel.js
ros2_workspace/src/adore_interfaces/hardware_monitor/web_ui/templates/: hardware_monitor.html
ros2_workspace/src/adore_interfaces/weather_service_interface/: Dockerfile  Makefile  README.md  forecast_logger.py  package.xml  requirements.pip3  setup.cfg  setup.py  sources.py  start_visualizer.sh  start_weather_service.sh  start_weather_service_and_visualizer.sh  weather_service_config.yaml  weather_visualizer_node.py
ros2_workspace/src/adore_interfaces/weather_service_interface/config/: weather_service_config.yaml
ros2_workspace/src/adore_interfaces/weather_service_interface/launch/: weather_service.launch.py  weather_service_and_visualizer.launch.py
ros2_workspace/src/adore_interfaces/weather_service_interface/weather_service_interface/: forecast.py  map_panel.py  weather_service_node.py  weather_visualizer_node.py
ros2_workspace/src/adore_interfaces/zenoh_message_bridge/: Dockerfile  Makefile  README.md  docker-entrypoint.sh  install_zenoh_router.sh  package.xml  requirements.pip3  requirements.system  setup.cfg  setup.py  start_local_zenoh_router.sh  start_zenoh_message_bridge.sh  stop_local_zenoh_router.sh  zenoh_bridge_config.json5  zenoh_echo.py  zenoh_publish.py  zenoh_router_config.json5
ros2_workspace/src/adore_interfaces/zenoh_message_bridge/config/: bridge_config.yaml
ros2_workspace/src/adore_interfaces/zenoh_message_bridge/launch/: bridge.launch.py
ros2_workspace/src/adore_interfaces/zenoh_message_bridge/zenoh_message_bridge/: bridge_node.py  utils.py
ros2_workspace/src/example_nodes/ros2_hello_world/: CMakeLists.txt  README.md  package.xml  requirements.cmake
ros2_workspace/src/example_nodes/ros2_hello_world/src/: ros2_hello_world.cpp
ros2_workspace/src/example_nodes/ros2_python_hello_world/: CMakeLists.txt  Makefile  README.md  package.xml  requirements.pip3  setup.py
ros2_workspace/src/example_nodes/ros2_python_hello_world/src/ros2_python_hello_world/: adore_hello_world_node.py  hello_world_node.py
ros2_workspace/src/example_nodes/ros2_python_hello_world/test/: test_dummy.py
ros2_workspace/src/ros2_syslog/: CMakeLists.txt
ros2_workspace/src/ros2_syslog/src/: ros2_syslog.cpp
ros2_workspace/src/traffic_predictor/: CMakeLists.txt  Makefile  README.md  package.xml  requirements.cmake  spec.md
ros2_workspace/src/traffic_predictor/src/: traffic_predictor.cpp
(+737 files in other folders)
