<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grpc_message_bridge</name>
  <version>2.0.0</version>
  <description>ROS 2 gRPC message bridge with bidi stream and oneof field routing</description>
  <maintainer email="dev@motorai.ai">motorai</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>

  <exec_depend>python3-grpcio</exec_depend>
  <exec_depend>python3-grpcio-tools</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
