<?xml version="1.0"?>
<package format="3">
  <name>hardware_monitor</name>
  <version>1.0.0</version>
  <description>ROS 2 hardware discovery and status monitoring nodes for cluster management</description>
  <maintainer email="you@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-psutil</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
