<?xml version="1.0"?>
<package format="3">
  <name>weather_service_interface</name>
  <version>1.0.0</version>
  <description>ROS 2 weather forecast service node: fetches forecasts from NOAA, DWD, or Open-Meteo and publishes to /ego_vehicle/weather_forecast</description>
  <maintainer email="you@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
