<?xml version="1.0"?>
<package format="3">
  <name>ros2_python_hello_world</name>
  <version>0.0.0</version>
  <description>Minimal ROS 2 Python "Hello World" node (ament_python)</description>
  <maintainer email="opensource-ts@dlr.de">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>python3</build_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>adore_ros2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
